--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="row marginSerHome">  
         <div class="col-lg-6 col-md-6 col-xs-12">
             <div class="textoSerHome">
-                <h2>Proyecto</h2>
+                <h2>Servicio 1</h2>
                 <p>Solicita la asesoría para tu obra nueva o para renovar tu hogar completo, desde la decoración a la construcción de nuevos espacios.</p>
                 <div class="tranScaleBoton">
                 <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
@@ -125,7 +125,7 @@
         </div>   
         <div class="col-lg-6 col-md-6 col-xs-12">
             <div class="textoSerHome">
-                <h2>Remodelación</h2>
+                <h2>Servicio 2</h2>
                 <p>Puedes cotizar la renovación de tu cocina, de tu baño o del espacio que quieras, nosotros te asesoramos en lo requieras para tu proyecto.</p>
                 <div class="tranScaleBoton">
                   <a class="btn btn-secondary btn-sm shadow-sm" href="./views/servicios.html">Ver detalles</a>
@@ -137,7 +137,7 @@
     <div class="row marginSerHome">  
         <div class="col-lg-6 col-md-6 col-xs-12">
             <div class="textoSerHome">
-                <h2>Muebles</h2>
+                <h2>Servicio 3</h2>
                 <p> Realiza tus muebles con nosotros, en nuestro taller de carpintería realizamos todo tipo de muebles a pedido en maderas nobles.</p>
                 <div class="tranScaleBoton">
                 <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
@@ -157,7 +157,7 @@
         </div>   
         <div class="col-lg-6 col-md-6 col-xs-12">
             <div class="textoSerHome">
-                <h2>Decoración</h2>
+                <h2>Servicio 4</h2>
                 <p>Con nuestro servicio de diseño de interiores podrás decorar tu hogar a gusto, y nosotros te ayudamos a buscar los productos más exclusivos del mercado.</p>
                 <div class="tranScaleBoton">
                 <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
