--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
 
 <!--Segunda Sección Home/Servicios Uno-->
 
+<section>
+  <h1>Prueba git</h1>
+  <h1>Prueba git</h1>
+
+</section>
+
 
 <section class="container-fluid sectionDos">
     
