--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Attico Studio proyectos de arquitectura y diseño de interiores para el hogar de tus sueños.">
     <meta name="keywords" content="PROYECTO, REMODELACIÓN, MUEBLES, DECORACIÓN, ARQUITECTURA, DISEÑO, INTERIOR">
-    <title>Home atticostudio</title>
+    <title>Inicio atticostudio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/estilos.css">
 </head>
