Rediseño servicios index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="jumbotron sectionUno__texJumbo">
 
         <div class="jumbotron__title">
-            <h1>¿Necesitas renovar tus espacios?/h1>
+            <h1>¿Necesitas renovar tus espacios?</h1>
         </div>
 
 
@@ -79,14 +79,6 @@
 </section>
 
 <!--Segunda Sección Home/Servicios Uno-->
-
-<section>
-  <h1>Prueba git</h1>
-  <h1>Prueba git</h1>
-  <h1>Prueba git</h1>
-
-</section>
-
 
 <section class="container-fluid sectionDos">
     
@@ -110,70 +102,62 @@
 
 <section class="container sectionDosServicios">
 
-    <div class="row marginSerHome">  
-        <div class="col-lg-6 col-md-6 col-xs-12">
-            <div class="textoSerHome">
-                <h2>Servicio 1</h2>
-                <p>Solicita la asesoría para tu obra nueva o para renovar tu hogar completo, desde la decoración a la construcción de nuevos espacios.</p>
-                <div class="tranScaleBoton">
-                <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
-                </div>
+    <div class="row g-4">
+      
+      <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
+        <div class="card" style="width: 18rem;">
+          <img src="img/ServicioProyecto1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h2 class="card-title">Proyecto</h2>
+            <p class="card-text">Solicita la asesoría para tu obra nueva o para renovar tu hogar completo, desde la decoración a la construcción de nuevos espacios.</p>
+            <div class="tranScaleBoton">
+            <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
             </div>
+          </div>
         </div>
+      </div>
 
-        <div class="col-lg-6 col-md-6 col-xs-12 imgSerHome ">
-            <img class="img-fluid rounded mx-auto d-block" src="./img/ServicioProyecto1.png" alt="">
-        </div>   
-    </div>
-
-    <div class="row marginSerHome">    
-        <div class="col-lg-6 col-md-6 col-xs-12 imgSerHome">
-            <img class="img-fluid rounded mx-auto d-block" src="./img/ServicioRemodelación1.png" alt="">
-        </div>   
-        <div class="col-lg-6 col-md-6 col-xs-12">
-            <div class="textoSerHome">
-                <h2>Servicio 2</h2>
-                <p>Puedes cotizar la renovación de tu cocina, de tu baño o del espacio que quieras, nosotros te asesoramos en lo requieras para tu proyecto.</p>
-                <div class="tranScaleBoton">
-                  <a class="btn btn-secondary btn-sm shadow-sm" href="./views/servicios.html">Ver detalles</a>
-                </div>
+      <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
+        <div class="card"  style="width: 18rem;">
+          <img src="img/ServicioRemodelación1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h2 class="card-title">Remodelación</h2>
+            <p class="card-text">Puedes cotizar la renovación de tu cocina, de tu baño o del espacio que quieras, nosotros te asesoramos en lo requieras para tu proyecto.</p>
+            <div class="tranScaleBoton">
+            <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
             </div>
+          </div>
         </div>
-    </div>
+      </div>
 
-    <div class="row marginSerHome">  
-        <div class="col-lg-6 col-md-6 col-xs-12">
-            <div class="textoSerHome">
-                <h2>Servicio 3</h2>
-                <p> Realiza tus muebles con nosotros, en nuestro taller de carpintería realizamos todo tipo de muebles a pedido en maderas nobles.</p>
-                <div class="tranScaleBoton">
-                <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
-                </div>
-
+      <div class="col serviciosCenter">
+        <div class="card" style="width: 18rem;">
+          <img src="img/ServicioMuebles1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h2 class="card-title">Muebles</h2>
+            <p class="card-text">Realiza tus muebles con nosotros, en nuestro taller de carpintería realizamos todo tipo de muebles a pedido en maderas nobles.</p>
+            <div class="tranScaleBoton">
+              <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
             </div>
+          </div>
         </div>
+      </div>
 
-        <div class="col-lg-6 col-md-6 col-xs-12  imgSerHome">
-            <img class="img-fluid rounded mx-auto d-block" src="./img/ServicioMuebles1.png" alt="">
-        </div>   
-    </div>
-
-    <div class="row marginSerHome">    
-        <div class="col-lg-6 col-md-6 col-xs-12  imgSerHome">
-            <img class="img-fluid rounded mx-auto d-block" src="./img/ServicioDecoración1.png" alt="">
-        </div>   
-        <div class="col-lg-6 col-md-6 col-xs-12">
-            <div class="textoSerHome">
-                <h2>Servicio 4</h2>
-                <p>Con nuestro servicio de diseño de interiores podrás decorar tu hogar a gusto, y nosotros te ayudamos a buscar los productos más exclusivos del mercado.</p>
-                <div class="tranScaleBoton">
-                <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
-                </div>
+      <div class="col serviciosCenter">
+        <div class="card" style="width: 18rem;">
+          <img src="img/ServicioDecoración1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h2 class="card-title">Decoración</h2>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <div class="tranScaleBoton">
+              <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
             </div>
+          </div>
         </div>
+      </div>
+
     </div>
 </section>
-
 
 <!--Tercera Sección Home/Previsualización Galeria Proyectos-->
 
