Cambio seccioń qué hacemos

--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
 
     <div class="col-lg-12 col-md-12 col-xs-12">    
 
-        <h2>Qué hacemos</h2>
-        <p>En AtticoStudio encontrarás un servicio de acuerdo a tus necesidades, ya que nuestra variedad de servicios se adaptan a los requerimientos de cada cliente. Realiza tu renovación con nosotros y obtén espacios soñados llenos de emociones.</p>
+        <h2 class="text-center">Qué hacemos</h2>
+        <p class="text-center">En AtticoStudio encontrarás un servicio de acuerdo a tus necesidades, ya que nuestra variedad de servicios se adaptan a los requerimientos de cada cliente. Realiza tu renovación con nosotros y obtén espacios soñados llenos de emociones.</p>
 
-<div class="tranHora">
-    <div class="agendaHora">
-    <a href="./views/contacto.html">AGENDA TU HORA</a>
-</div>
+        <p class="lead tranScaleBoton serviciosCenter">
+          <a class="btn btn-secondary btn-lg shadow-sm" href="./views/contacto.html" role="button">Agenda tu hora</a>
+        </p>
 
 </div>
 </div>
