--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="row g-4">
       
       <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
-        <div class="card" style="width: 18rem;">
+        <div class="card shadow" style="width: 18rem;">
           <img src="img/ServicioProyecto1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h2 class="card-title">Proyecto</h2>
@@ -117,7 +117,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
-        <div class="card"  style="width: 18rem;">
+        <div class="card shadow"  style="width: 18rem;">
           <img src="img/ServicioRemodelación1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h2 class="card-title">Remodelación</h2>
@@ -130,7 +130,7 @@
       </div>
 
       <div class="col serviciosCenter">
-        <div class="card" style="width: 18rem;">
+        <div class="card shadow" style="width: 18rem;">
           <img src="img/ServicioMuebles1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h2 class="card-title">Muebles</h2>
@@ -143,7 +143,7 @@
       </div>
 
       <div class="col serviciosCenter">
-        <div class="card" style="width: 18rem;">
+        <div class="card shadow" style="width: 18rem;">
           <img src="img/ServicioDecoración1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h2 class="card-title">Decoración</h2>
