Corregí enlaces rotos

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <hr class="my-2">
         <p>Revisa nuestros servicios y animate a cotizar con Attico Studio.</p>
         <p class="lead tranScaleBoton">
-          <a class="btn btn-secondary btn-lg shadow-sm" href="./views/contacto.html" role="button">Ver Servicios</a>
+          <a class="btn btn-secondary btn-lg shadow-sm" href="./views/servicios.html" role="button">Ver Servicios</a>
         </p>
       </div>
     </div>
@@ -142,7 +142,6 @@
 
 <!--Tercera Sección Home/Previsualización Galeria Proyectos-->
 
-
 <section class=" container-fluid sectionTresPro">
   <div class="row">
     <h2>Galeria de proyectos</h2>
@@ -152,7 +151,7 @@
             <figcaption>
               <h3>Cocina <span>Las Condes</span></h3> 
               <p>Proyecto cocina estilo vintage casa las Las Condes.</p>
-              <a href="#"></a>
+              <a href="views/proyectos.html"></a>
             </figcaption>
           </figure>
         </div>
@@ -162,7 +161,7 @@
             <figcaption>
               <h3>Muebles <span>Los Molinos</span></h3> 
               <p>Desarrollo de mobiliario casa Los Molinos.</p>
-              <a href="#"></a>
+              <a href="views/proyectos.html"></a>
             </figcaption>
           </figure>
         </div>
@@ -172,7 +171,7 @@
             <figcaption>
               <h3>Terraza <span>Pacheco</span></h3> 
               <p>Remodelación Terraza Región del Maule</p>
-              <a href="#"></a>
+              <a href="views/proyectos.html"></a>
             </figcaption>
           </figure>
         </div>
@@ -180,7 +179,6 @@
 </section>
 
 <!--Cuarta Sección Home/BLog-->
-
 
 <section class="container sectionCuatro">
     <div class="row">
