Modifiqué tamaño cards blog index

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
 <div class="sectionCuatro__title">
     <h2 >Lo último del blog</h2>
 </div>
-    <div class="col-lg-4 col-md-4 col-xs-12">
-        <div class="card w-100 mb-3" style="width: 18rem;">
+    <div class="col-lg-4 col-md-4 col-xs-12 cardCenter">
+        <div class="card w-90 mb-3" style="width: 18rem;">
             <img src="./img/BotanicoBlog.png" class="card-img-top" alt="...">
             <div class="card-body cardColor">
               <h4>Estilo Botánico</h4>
@@ -195,8 +195,8 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-12">
-        <div class="card w-auto mb-3" style="width: 18rem;">
+    <div class="col-lg-4 col-md-4 col-xs-12 mx-auto cardCenter">
+        <div class="card w-90 mb-3" style="width: 18rem;">
             <img src="./img/InOutBloog.png" class="card-img-top" alt="...">
             <div class="card-body cardColor">
                 <h4>In&Out</h4>
@@ -206,8 +206,8 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-12">
-        <div class="card w-auto mb-3" style="width: 18rem;">
+    <div class="col-lg-4 col-md-4 col-xs-12 cardCenter">
+        <div class="card w-90 mb-3" style="width: 18rem;">
             <img src="./img/TerrazoBlog.png" class="card-img-top" alt="...">
             <div class="card-body cardColor">
                 <h4>Estilo Terrazo</h4>
