Revisé h y cards en distintas secciones

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
 <section class="sectionUnoCard">
   <div class="card bg-dark">
-    <img src="img/SillaIndex.png" class="card-img" alt="...">
-    <div class="card-img-overlay sectionUnoBody">
-      <h1 class="card-title section__title">¿Necesitas renovar tus espacios?</h1>
-      <div class="sectionUno__texto">
+    <img src="img/SillaIndex.png" class="card-img img-fluid" alt="...">
+    <div class="card-img-overlay sectionUnoBody col-lg-6 col-md-6 col-xs-12">
+      <h1 class="card-title">¿Necesitas renovar tus espacios?</h1>
+      <div class="sectionUnoCard__texto">
         <p>Estamos aqui para ayudarte, te ofrecemos la manera más simple y efectiva de tener la casa de tus sueños.</p>
         <hr class="my-2">
         <p>Revisa nuestros servicios y animate a cotizar con Attico Studio.</p>
@@ -218,7 +218,6 @@
     </div>
   </div>
 </section>
-
 
 <!--Footer-->
 
