Modifiqué Jumbotron en index y contacto

--- a/index.html
+++ b/index.html
@@ -55,18 +55,16 @@
 <!--Primera Sección Home/Fotografía+Titulo Principal-->
 
 <section class="sectionUnoCard">
-  <div class="card bg-dark">
-    <img src="img/SillaIndex.png" class="card-img img-fluid" alt="...">
-    <div class="card-img-overlay sectionUnoBody col-lg-6 col-md-6 col-xs-12">
-      <h1 class="card-title">¿Necesitas renovar tus espacios?</h1>
-      <div class="sectionUnoCard__texto">
-        <p>Estamos aqui para ayudarte, te ofrecemos la manera más simple y efectiva de tener la casa de tus sueños.</p>
-        <hr class="my-2">
-        <p>Revisa nuestros servicios y animate a cotizar con Attico Studio.</p>
-        <p class="lead tranScaleBoton">
-          <a class="btn btn-secondary btn-lg shadow-sm" href="./views/servicios.html" role="button">Ver Servicios</a>
-        </p>
-      </div>
+  <div class="jumbotron">
+    <div>
+      <img src="img/SillaIndex.png" class="card-img img-fluid" alt="...">
+    </div>
+    <div class="card-img-overlay sectionUnoBody col-9">
+      <h1>¿Necesitas renovar tus espacios?</h1>
+      <p class="lead mt-3">Estamos aqui para ayudarte, te ofrecemos la manera más simple y efectiva de tener la casa de tus sueños. Revisa nuestros servicios y animate a cotizar con Attico Studio.</p>
+      <p class="lead tranScaleBoton">
+        <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="./views/servicios.html" role="button">Ver Servicios</a>
+      </p>
     </div>
   </div>
 </section>
