Corregí sección principal index y contacto / formulario de contacto

--- a/index.html
+++ b/index.html
@@ -54,14 +54,11 @@
 
 <!--Primera Sección Home/Fotografía+Titulo Principal-->
 
-<section class="sectionUnoCard">
-  <div class="jumbotron">
-    <div>
-      <img src="img/SillaIndex.png" class="card-img img-fluid" alt="...">
-    </div>
-    <div class="card-img-overlay sectionUnoBody col-9">
-      <h1>¿Necesitas renovar tus espacios?</h1>
-      <p class="lead mt-3">Estamos aqui para ayudarte, te ofrecemos la manera más simple y efectiva de tener la casa de tus sueños. Revisa nuestros servicios y animate a cotizar con Attico Studio.</p>
+<section class="row mt-4">
+  <div class="p-5 bg-image img-fluid" style="background-image: url('img/SillaIndex.png'); height: 500px;">
+    <div class="w-75">
+      <h1 class="mb-3">¿Necesitas renovar tus espacios?</h1>
+      <p class="mb-3 font-weight-bolder d-flex justify-content-center secUno">Estamos aqui para ayudarte, te ofrecemos la manera más simple y efectiva de tener la casa de tus sueños. Revisa nuestros servicios y animate a cotizar con Attico Studio.</p>
       <p class="lead tranScaleBoton">
         <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="./views/servicios.html" role="button">Ver Servicios</a>
       </p>
