última versión 4ta entrega

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
   <div class="container text-md-left">   
     <div class="row">
       <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-5 mb-1">
-        <a href="./index.html"><img src="../img/LogoAtticoWhite.svg" width="210px" alt=""></a>
+        <a href="./index.html"><img src="img/LogoAtticoWhite.svg" width="210px" alt=""></a>
       </div>
       <hr class="clearfix w-100 d-md-none">        
       <div class="col-xs-12 col-md-4 col-lg-4 mx-auto my-md-4 my-0 mt-4 mb-1">
