--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <!--Primera Sección Home/Fotografía+Titulo Principal-->
 
 <section class="row mt-4">
-  <div class="p-5 bg-image img-fluid" style="background-image: url('img/SillaIndex.png'); height: 500px;">
+  <div class="p-5 bg-image img-fluid" style="background-image: url('img/index.png'); height: 500px;">
     <div class="w-75">
       <h1 class="mb-3">¿Necesitas renovar tus espacios?</h1>
       <p class="mb-3 font-weight-bolder d-flex justify-content-center secUno">Estamos aqui para ayudarte, te ofrecemos la manera más simple y efectiva de tener la casa de tus sueños. Revisa nuestros servicios y animate a cotizar con Attico Studio.</p>
@@ -70,8 +70,8 @@
 
 <!--Segunda Sección Home/Servicios Uno-->
 
-<section class="container-fluid sectionDos">  
-  <div class="row sectionDos__textoQuehacemos">
+<section class="container-fluid sectionDos d-flex justify-content-center">
+  <div class="row textoSecDos">
     <div class="col-lg-12 col-md-12 col-xs-12">    
       <h2 class="mt-3">Qué hacemos</h2>
         <p>En AtticoStudio encontrarás un servicio de acuerdo a tus necesidades, <span> ya que nuestra variedad de servicios se adaptan a los requerimientos de cada cliente.</span> Realiza tu renovación con nosotros y obtén espacios soñados llenos de emociones.</p>
@@ -91,7 +91,7 @@
           <img src="img/ServicioProyecto1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h3 class="card-title">Proyecto</h3>
-            <p class="card-text">Solicita la asesoría para tu obra nueva o para renovar tu hogar completo, desde la decoración a la construcción de nuevos espacios.</p>
+            <p class="card-text">Hacemos que tu hogar u oficina sea como siempre soñaste. Armamos un proyecto completo para que puedas montarlo con tus propias manos desde cero.</p>
             <div class="tranScaleBoton">
             <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
             </div>
@@ -103,7 +103,7 @@
           <img src="img/ServicioRemodelación1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h3 class="card-title">Remodelación</h3>
-            <p class="card-text">Puedes cotizar la renovación de tu cocina, de tu baño o del espacio que quieras, nosotros te asesoramos en lo requieras para tu proyecto.</p>
+            <p class="card-text">Nos encargamos de la renovación del espacio que necesites. Nosotros te asesoramos y construimos lo que requieras para tu remodelación.</p>
             <div class="tranScaleBoton">
             <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
             </div>
@@ -115,7 +115,7 @@
           <img src="img/ServicioMuebles1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h3 class="card-title">Muebles</h3>
-            <p class="card-text">Realiza tus muebles con nosotros, en nuestro taller de carpintería realizamos todo tipo de muebles a pedido en maderas nobles.</p>
+            <p class="card-text">Realizamos muebles a pedido en, ya sea para complementar un proyecto o el mueble que el cliente requiera.</p>
             <div class="tranScaleBoton">
               <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
             </div>
@@ -127,7 +127,7 @@
           <img src="img/ServicioDecoración1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h3 class="card-title">Decoración</h3>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Puede que tan solo estés buscando una pequeña orientación para la decoración de tu hogar. </p>
             <div class="tranScaleBoton">
               <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
             </div>
