--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
 
 <!--Cuarta Sección Home/BLog-->
 
-<section class="container sectionCuatro">
-    <div class="row">
-<div class="sectionCuatro__title">
+<section class="container-fluid sectionCuatro">
+<div class="row">
+  <div class="sectionCuatroTitle">
     <h2 >Lo último del blog</h2>
-</div>
+  </div>
     <div class="col-lg-4 col-md-4 col-xs-12 cardCenter">
         <div class="card w-90 mb-3" style="width: 18rem;">
             <img src="./img/BotanicoBlog.png" class="card-img-top" alt="...">
