corregí padding de section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 <section class=" container-fluid sectionTresPro">
   <div class="row">
-    <h2>Galeria de proyectos</h2>
+    <h2 class="sectionTresTitle">Galeria de proyectos</h2>
         <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
           <figure class="effect-sadie">
             <img class="img-fluid mx-auto d-block" src="img/CocinaVintaje.png" alt="">
