--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <section class="row mt-4">
   <div class="p-5 bg-image img-fluid" style="background-image: url('img/index.png'); height: 500px;">
-    <div class="w-75">
+    <div class="w-75 col-xs-12">
       <h1 class="mb-3">¿Necesitas renovar tus espacios?</h1>
       <p class="mb-3 font-weight-bolder d-flex justify-content-center secUno">Estamos aqui para ayudarte, te ofrecemos la manera más simple y efectiva de tener la casa de tus sueños. Revisa nuestros servicios y animate a cotizar con Attico Studio.</p>
       <p class="lead tranScaleBoton">
