--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/estilos.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -56,11 +57,23 @@
 
 <!--Primera Sección Home/Fotografía+Titulo Principal-->
 
-<section class="row mt-4">
-  <div class="p-5 bg-image img-fluid" style="background-image: url('img/index.png'); height: 500px;">
+<section class="jumbotron-fluid sectionUno ">
+  <div class="container-fluid p-5">
+    <div class="w-75 col-md-6">
+      <h1 class="mb-4">¿Necesitas renovar tus espacios?</h1>
+      <p class="mb-4"> <span>Estamos aqui para ayudarte, te ofrecemos la manera más simple y efectiva de tener la casa de tus sueños.</span></p>
+      <p class="lead tranScaleBoton">
+        <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="./views/servicios.html" role="button">Ver Servicios</a>
+      </p>
+    </div>
+  </div>
+</section>
+
+<!--<section class="row mt-4">
+  <div class="p-5 bg-image" style="background-image: url('img/index.png'); height: 500px;">
     <div class="w-75 col-xs-12">
       <h1 class="mb-3">¿Necesitas renovar tus espacios?</h1>
-      <p class="mb-3 font-weight-bolder d-flex justify-content-center secUno">Estamos aqui para ayudarte, te ofrecemos la manera más simple y efectiva de tener la casa de tus sueños. Revisa nuestros servicios y animate a cotizar con Attico Studio.</p>
+      <p class="mb-3">Estamos aqui para ayudarte, te ofrecemos la manera más simple y efectiva de tener la casa de tus sueños.</p>
       <p class="lead tranScaleBoton">
         <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="./views/servicios.html" role="button">Ver Servicios</a>
       </p>
@@ -86,7 +99,7 @@
 
 <section class="container sectionDosServicios">
     <div class="row g-4"> 
-      <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
+      <div data-aos="zoom-in-right" class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
           <img src="img/ServicioProyecto1.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -98,7 +111,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
+      <div data-aos="zoom-in-right" class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
         <div class="card shadow"  style="width: 18rem;">
           <img src="img/ServicioRemodelación1.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -110,7 +123,7 @@
           </div>
         </div>
       </div>
-      <div class="col serviciosCenter">
+      <div data-aos="zoom-in-right" class="col serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
           <img src="img/ServicioMuebles1.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -122,7 +135,7 @@
           </div>
         </div>
       </div>
-      <div class="col serviciosCenter">
+      <div data-aos="zoom-in-right" class="col serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
           <img src="img/ServicioDecoración1.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -260,6 +273,12 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<script>
+  AOS.init();
+</script>
 
 </body>
 </html>
