Cambio img contacto

--- a/index.html
+++ b/index.html
@@ -69,18 +69,6 @@
   </div>
 </section>
 
-<!--<section class="row mt-4">
-  <div class="p-5 bg-image" style="background-image: url('img/index.png'); height: 500px;">
-    <div class="w-75 col-xs-12">
-      <h1 class="mb-3">¿Necesitas renovar tus espacios?</h1>
-      <p class="mb-3">Estamos aqui para ayudarte, te ofrecemos la manera más simple y efectiva de tener la casa de tus sueños.</p>
-      <p class="lead tranScaleBoton">
-        <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="./views/servicios.html" role="button">Ver Servicios</a>
-      </p>
-    </div>
-  </div>
-</section>
-
 <!--Segunda Sección Home/Servicios Uno-->
 
 <section class="container-fluid sectionDos d-flex justify-content-center">
@@ -154,7 +142,7 @@
 
 <section class=" container-fluid sectionTresPro">
   <div class="row">
-    <h2 class="sectionTresTitle">Galeria de proyectos</h2>
+    <h2 class="sectionTresTitle">Algunos de nuestros proyectos</h2>
         <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
           <figure class="effect-sadie">
             <img class="img-fluid mx-auto d-block" src="img/CocinaVintaje.png" alt="">
