--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!--Menu-->
 
 <header>
-   <div class="container">
+   <div class="container-fluid">
        <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
