--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 
 <!--Primera Sección Home/Fotografía+Titulo Principal-->
 
-<section class="jumbotron-fluid sectionUno ">
+<section class="jumbotron-fluid sectionUno">
   <div class="container-fluid p-5">
     <div class="w-75 col-md-6">
-      <h1 class="mb-4">¿Necesitas renovar tus espacios?</h1>
-      <p class="mb-4"> <span>Estamos aqui para ayudarte, te ofrecemos la manera más simple y efectiva de tener la casa de tus sueños.</span></p>
+      <h1 class="mb-4">¿Necesitas una renovación?</h1>
+      <p class="mb-3"><span>Estamos aqui para ayudarte, te ofrecemos la manera más simple de tener la casa de tus sueños.</span></p>
       <p class="lead tranScaleBoton">
-        <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="./views/servicios.html" role="button">Ver Servicios</a>
+        <a class="btn btn-dark btn-lg shadow-lg mt-3" href="./views/servicios.html" role="button">Ver Servicios</a>
       </p>
     </div>
   </div>
