--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 <!--Primera Sección Home/Fotografía+Titulo Principal-->
 
 <section class="jumbotron-fluid sectionUno">
-  <div class="container-fluid p-5">
+  <div class="container-fluid pt-5">
     <div class="w-75 col-md-6">
-      <h1 class="mb-4">¿Necesitas una renovación?</h1>
+      <h1 class="mb-4">¿Buscas una renovación?</h1>
       <p class="mb-3"><span>Estamos aqui para ayudarte, te ofrecemos la manera más simple de tener la casa de tus sueños.</span></p>
       <p class="lead tranScaleBoton">
-        <a class="btn btn-dark btn-lg shadow-lg mt-3" href="./views/servicios.html" role="button">Ver Servicios</a>
+        <a class="btn btn-secondary btn-lg shadow-lg mt-3" href="./views/servicios.html" role="button">Ver Servicios</a>
       </p>
     </div>
   </div>
