--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html"><img src="./img/LogoAtticoMorado.svg" width="165px" alt=""></a>
+              <a class="navbar-brand" href="./index.html"><img src="./img/LogoAtticoGris.svg" width="165px" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -241,7 +241,7 @@
             </ul>
       </div>
       <hr class="clearfix w-100 d-md-none">
-      <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
+      <div class="col-md-4 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
           <a type="button" class="btn-floating btn-fb">
             <i class="fab fa-facebook-f"><img src="img/facebook.svg" width="30px"alt=""></i>
