--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html"><img src="./img/LogoAtticoGris.svg" width="165px" alt=""></a>
+              <a class="navbar-brand" href="./index.html"><img src="img/LogoAtticoGris.svg" width="165px" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -75,7 +75,7 @@
   <div class="row textoSecDos">
     <div class="col-lg-12 col-md-12 col-xs-12">    
       <h2 class="mt-3">Qué hacemos</h2>
-        <p>En AtticoStudio encontrarás un servicio de acuerdo a tus necesidades, <span> ya que nuestra variedad de servicios se adaptan a los requerimientos de cada cliente.</span> Realiza tu renovación con nosotros y obtén espacios soñados llenos de emociones.</p>
+        <p>En AtticoStudio encontrarás una atención de acuerdo a tus necesidades, <span> ya que nuestra variedad de servicios se adaptan a los requerimientos de cada cliente.</span> Realiza tu renovación con nosotros y obtén espacios soñados llenos de emociones.</p>
         <p class="lead tranScaleBoton serviciosCenter">
           <a class="btn btn-secondary btn-lg shadow-sm mt-1" href="./views/contacto.html" role="button">Agenda tu hora</a>
         </p>
@@ -187,7 +187,7 @@
         <div class="card w-90 mb-3" style="width: 18rem;">
             <img src="./img/BotanicoBlog.png" class="card-img-top" alt="...">
             <div class="card-body cardColor">
-              <h4>Estilo Botánico</h4>
+              <h3>Estilo Botánico</h3>
               <p>Darle un toque verde a tus espacios nunca esta demás. Descubre las nuevas alternativas del mercado en porcelanatos y cerámicas para que tus espacios se vuelvan acogedores y con un estilo único. Revisa los productos que recomendamos, desde impresiones con selvas a sutiles petalos en relevie para tus muros.</p>
               <a href="#" class="btn btn-sm btn-dark">Ver más</a>
             </div>
@@ -197,7 +197,7 @@
         <div class="card w-90 mb-3" style="width: 18rem;">
             <img src="./img/InOutBloog.png" class="card-img-top" alt="...">
             <div class="card-body cardColor">
-                <h4>In&Out</h4>
+                <h3>In&Out</h3>
                 <p>Actualmente la tendencia de los porcelanatos y gres tipo madera está en alza. Dentro de esta categoría destacan las series IN&OUT. Este concepto se aplica a los revestimientos que cuentan como una única terminación que sirve tanto para interior como para exterior, logrando darle continuidad a los espacios.
                 </p>
                 <a href="#" class="btn btn-sm btn-dark">Ver más</a>
@@ -208,7 +208,7 @@
         <div class="card w-90 mb-3" style="width: 18rem;">
             <img src="./img/TerrazoBlog.png" class="card-img-top" alt="...">
             <div class="card-body cardColor">
-                <h4>Estilo Terrazo</h4>
+                <h3>Estilo Terrazo</h3>
                 <p>El look terrazo es una tendencia de los años ‘60 y ‘70 que hoy está revistiendo muros. Gracias a los avances técnicos han mejorado tanto las propiedades como la estética de este material. Actualmente se usa para revestir muros de baños y cocinas para darles un look elegante y moderno en su variedad de colores.</p>
               <a href="#" class="btn btn-sm btn-dark">Ver más</a>
             </div>
@@ -223,7 +223,7 @@
   <div class="container text-md-left">   
     <div class="row">
       <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-5 mb-1">
-        <a href="./index.html"><img src="img/LogoAtticoWhite.svg" width="210px" alt=""></a>
+        <a href="/index.html"><img src="img/LogoAtticoWhite.svg" width="210px" alt=""></a>
       </div>
       <hr class="clearfix w-100 d-md-none">        
       <div class="col-xs-12 col-md-4 col-lg-4 mx-auto my-md-4 my-0 mt-4 mb-1">
@@ -243,13 +243,13 @@
       <hr class="clearfix w-100 d-md-none">
       <div class="col-md-4 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
-          <a type="button" class="btn-floating btn-fb">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
             <i class="fab fa-facebook-f"><img src="img/facebook.svg" width="30px"alt=""></i>
           </a>
-          <a type="button" class="btn-floating btn-tw">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-tw">
             <i class="fab fa-twitter"><img src="img/instagram.svg" width="30px"alt=""></i>
           </a>
-          <a type="button" class="btn-floating btn-gplus">
+          <a href="https://www.google.com/" type="button" class="btn-floating btn-gplus">
             <i class="fab fa-google-plus-g"><img src="img/linkedin.svg" width="30px" alt=""></i>
           </a>
       </div>
@@ -260,10 +260,10 @@
   </div> 
 </footer>
 
+<!--Scripts-->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
 <script>
   AOS.init();
 </script>
