--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Attico Studio proyectos de arquitectura y diseño de interiores para el hogar de tus sueños.">
     <meta name="keywords" content="PROYECTO, REMODELACIÓN, MUEBLES, DECORACIÓN, ARQUITECTURA, DISEÑO, INTERIOR">
-    <title>Inicio - AS</title>
+    <title>Inicio - AtticoStudio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/estilos.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-
 <body>
-
 <!--Menu-->
-
 <header>
    <div class="container-fluid">
        <div class="row">
@@ -54,9 +51,7 @@
        </div>
    </div>   
 </header>
-
 <!--Primera Sección Home/Fotografía+Titulo Principal-->
-
 <section class="jumbotron-fluid sectionUno">
   <div class="container-fluid pt-5">
     <div class="w-75 col-md-6">
@@ -68,9 +63,7 @@
     </div>
   </div>
 </section>
-
 <!--Segunda Sección Home/Servicios Uno-->
-
 <section class="container-fluid sectionDos d-flex justify-content-center">
   <div class="row textoSecDos">
     <div class="col-lg-12 col-md-12 col-xs-12">    
@@ -83,7 +76,7 @@
   </div>
 </section>
 
-<!--Segunda Sección Home/Servicios Dos-->
+<!--Segunda Sección Home/Servicios-->
 
 <section class="container sectionDosServicios">
     <div class="row g-4"> 
@@ -92,7 +85,7 @@
           <img src="img/ServicioProyecto1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h3 class="card-title">Proyecto</h3>
-            <p class="card-text">Hacemos que tu hogar u oficina sea como siempre soñaste. Armamos un proyecto completo para que puedas montarlo con tus propias manos desde cero.</p>
+            <p class="card-text">Hacemos que tus espacios sean como siempre soñaste. Armamos un proyecto completo para que puedas montarlo con tus propias manos desde cero.</p>
             <div class="tranScaleBoton">
             <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
             </div>
@@ -116,7 +109,7 @@
           <img src="img/ServicioMuebles1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h3 class="card-title">Muebles</h3>
-            <p class="card-text">Realizamos muebles a pedido en, ya sea para complementar un proyecto o el mueble que el cliente requiera.</p>
+            <p class="card-text">Realizamos muebles a medida, ya sea para complementar un proyecto nuestro, ó muebles a pedido según el requerimiento de cada cliente.</p>
             <div class="tranScaleBoton">
               <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
             </div>
@@ -128,7 +121,7 @@
           <img src="img/ServicioDecoración1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h3 class="card-title">Decoración</h3>
-            <p class="card-text">Puede que tan solo estés buscando una pequeña orientación para la decoración de tu hogar. </p>
+            <p class="card-text">Hacemos un trabajo integrado de interiorismo en donde nos encargamos de todo. Proyecto, compra y montaje del espacio hasta el último detalle.</p>
             <div class="tranScaleBoton">
               <a class="btn btn-sm btn-secondary shadow-sm" href="./views/servicios.html">Ver detalles</a>
             </div>
@@ -137,9 +130,7 @@
       </div>
     </div>
 </section>
-
 <!--Tercera Sección Home/Previsualización Galeria Proyectos-->
-
 <section class=" container-fluid sectionTresPro">
   <div class="row">
     <h2 class="sectionTresTitle">Algunos de nuestros proyectos</h2>
@@ -175,9 +166,7 @@
         </div>
   </div> 
 </section>
-
-<!--Cuarta Sección Home/BLog-->
-
+<!--Cuarta Sección Home/Blog-->
 <section class="container-fluid sectionCuatro">
 <div class="row">
   <div class="sectionCuatroTitle">
@@ -259,14 +248,11 @@
     © Todos los derechos reservados, 2021.
   </div> 
 </footer>
-
 <!--Scripts-->
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   AOS.init();
 </script>
-
 </body>
 </html>
