--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html"><img src="img/LogoAtticoGris.svg" width="165px" alt=""></a>
+              <a class="navbar-brand" href="./index.html"><img src="img/LogoAtticoGris.svg" width="165px" alt="Logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -82,7 +82,7 @@
     <div class="row g-4"> 
       <div data-aos="zoom-in-right" class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
-          <img src="img/ServicioProyecto1.png" class="card-img-top" alt="...">
+          <img src="img/ServicioProyecto1.png" class="card-img-top" alt="Servicio1">
           <div class="card-body">
             <h3 class="card-title">Proyecto</h3>
             <p class="card-text">Hacemos que tus espacios sean como siempre soñaste. Armamos un proyecto completo para que puedas montarlo con tus propias manos desde cero.</p>
@@ -94,7 +94,7 @@
       </div>
       <div data-aos="zoom-in-right" class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
         <div class="card shadow"  style="width: 18rem;">
-          <img src="img/ServicioRemodelación1.png" class="card-img-top" alt="...">
+          <img src="img/ServicioRemodelación1.png" class="card-img-top" alt="Servicio2">
           <div class="card-body">
             <h3 class="card-title">Remodelación</h3>
             <p class="card-text">Nos encargamos de la renovación del espacio que necesites. Nosotros te asesoramos y construimos lo que requieras para tu remodelación.</p>
@@ -106,7 +106,7 @@
       </div>
       <div data-aos="zoom-in-right" class="col serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
-          <img src="img/ServicioMuebles1.png" class="card-img-top" alt="...">
+          <img src="img/ServicioMuebles1.png" class="card-img-top" alt="Servicio3">
           <div class="card-body">
             <h3 class="card-title">Muebles</h3>
             <p class="card-text">Realizamos muebles a medida, ya sea para complementar un proyecto nuestro, ó muebles a pedido según el requerimiento de cada cliente.</p>
@@ -118,7 +118,7 @@
       </div>
       <div data-aos="zoom-in-right" class="col serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
-          <img src="img/ServicioDecoración1.png" class="card-img-top" alt="...">
+          <img src="img/ServicioDecoración1.png" class="card-img-top" alt="Servicio4">
           <div class="card-body">
             <h3 class="card-title">Decoración</h3>
             <p class="card-text">Hacemos un trabajo integrado de interiorismo en donde nos encargamos de todo. Proyecto, compra y montaje del espacio hasta el último detalle.</p>
@@ -136,7 +136,7 @@
     <h2 class="sectionTresTitle">Algunos de nuestros proyectos</h2>
         <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
           <figure class="effect-sadie">
-            <img class="img-fluid mx-auto d-block" src="img/CocinaVintaje.png" alt="">
+            <img class="img-fluid mx-auto d-block" src="img/CocinaVintaje.png" alt="Galeria1">
             <figcaption>
               <h3>Cocina <span>Las Condes</span></h3> 
               <p>Proyecto cocina estilo vintage casa las Las Condes.</p>
@@ -146,7 +146,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
           <figure class="effect-sadie">
-            <img class="img-fluid mx-auto d-block" src="img/Galeria1.png" alt="">
+            <img class="img-fluid mx-auto d-block" src="img/Galeria1.png" alt="Galeria2">
             <figcaption>
               <h3>Muebles <span>Los Molinos</span></h3> 
               <p>Desarrollo de mobiliario casa Los Molinos.</p>
@@ -156,7 +156,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
           <figure class="effect-sadie">
-            <img class="img-fluid mx-auto d-block" src="img/TerrazaMadera.png" alt="">
+            <img class="img-fluid mx-auto d-block" src="img/TerrazaMadera.png" alt="Galeria3">
             <figcaption>
               <h3>Terraza <span>Pacheco</span></h3> 
               <p>Remodelación Terraza Región del Maule</p>
@@ -174,7 +174,7 @@
   </div>
     <div class="col-lg-4 col-md-4 col-xs-12 cardCenter">
         <div class="card w-90 mb-3" style="width: 18rem;">
-            <img src="./img/BotanicoBlog.png" class="card-img-top" alt="...">
+            <img src="./img/BotanicoBlog.png" class="card-img-top" alt="Blog1">
             <div class="card-body cardColor">
               <h3>Estilo Botánico</h3>
               <p>Darle un toque verde a tus espacios nunca esta demás. Descubre las nuevas alternativas del mercado en porcelanatos y cerámicas para que tus espacios se vuelvan acogedores y con un estilo único. Revisa los productos que recomendamos, desde impresiones con selvas a sutiles petalos en relevie para tus muros.</p>
@@ -184,7 +184,7 @@
     </div>
     <div class="col-lg-4 col-md-4 col-xs-12 mx-auto cardCenter">
         <div class="card w-90 mb-3" style="width: 18rem;">
-            <img src="./img/InOutBloog.png" class="card-img-top" alt="...">
+            <img src="./img/InOutBloog.png" class="card-img-top" alt="Blog2">
             <div class="card-body cardColor">
                 <h3>In&Out</h3>
                 <p>Actualmente la tendencia de los porcelanatos y gres tipo madera está en alza. Dentro de esta categoría destacan las series IN&OUT. Este concepto se aplica a los revestimientos que cuentan como una única terminación que sirve tanto para interior como para exterior, logrando darle continuidad a los espacios.
@@ -195,7 +195,7 @@
     </div>
     <div class="col-lg-4 col-md-4 col-xs-12 cardCenter">
         <div class="card w-90 mb-3" style="width: 18rem;">
-            <img src="./img/TerrazoBlog.png" class="card-img-top" alt="...">
+            <img src="./img/TerrazoBlog.png" class="card-img-top" alt="Blog3">
             <div class="card-body cardColor">
                 <h3>Estilo Terrazo</h3>
                 <p>El look terrazo es una tendencia de los años ‘60 y ‘70 que hoy está revistiendo muros. Gracias a los avances técnicos han mejorado tanto las propiedades como la estética de este material. Actualmente se usa para revestir muros de baños y cocinas para darles un look elegante y moderno en su variedad de colores.</p>
@@ -212,7 +212,7 @@
   <div class="container text-md-left">   
     <div class="row">
       <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-5 mb-1">
-        <a href="/index.html"><img src="img/LogoAtticoWhite.svg" width="210px" alt=""></a>
+        <a href="/index.html"><img src="img/LogoAtticoWhite.svg" width="210px" alt="Logo"></a>
       </div>
       <hr class="clearfix w-100 d-md-none">        
       <div class="col-xs-12 col-md-4 col-lg-4 mx-auto my-md-4 my-0 mt-4 mb-1">
@@ -233,13 +233,13 @@
       <div class="col-md-4 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
-            <i class="fab fa-facebook-f"><img src="img/facebook.svg" width="30px"alt=""></i>
+            <i class="fab fa-facebook-f"><img src="img/facebook.svg" width="30px"alt="facebook"></i>
           </a>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-tw">
-            <i class="fab fa-twitter"><img src="img/instagram.svg" width="30px"alt=""></i>
+            <i class="fab fa-twitter"><img src="img/instagram.svg" width="30px"alt="instagram"></i>
           </a>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-gplus">
-            <i class="fab fa-google-plus-g"><img src="img/linkedin.svg" width="30px" alt=""></i>
+            <i class="fab fa-google-plus-g"><img src="img/linkedin.svg" width="30px" alt="linkedin"></i>
           </a>
       </div>
     </div>
